Fix global shortcuts only working once

This happened because the actions were given a parent in a previous
commit. They worked more than once before the commit because the actions
were being leaked. `action->setProperty("isConfigurationAction", true)`
fixes the single use action problem.

BUG: 464706